--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать?&#8594;</a></p>
       <div class="header__main-illustration"></div>
-      <div class="header__square-pic rotation header__square-pic_rotation"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
-      <section class="description content_description">
+      <section class="description">
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
@@ -36,31 +36,31 @@
         <div class="cards">
           <div class="cards__item">
             <img class="cards__image" src="images/cards-attention.png" alt="Книга">
-            <h2 class="cards__title">Два вида внимания</h2> 
+            <h3 class="cards__title">Два вида внимания</h3> 
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
 
           <div class="cards__item">
             <img class="cards__image" src="images/cards-recall.png" alt="Статуя">
-            <h2 class="cards__title">Recall</h2> 
+            <h3 class="cards__title">Recall</h3> 
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
 
           <div class="cards__item">
             <img class="cards__image" src="images/cards-interliving.png" alt="Много людей в здании">
-            <h2 class="cards__title">Интерливинг</h2> 
+            <h3 class="cards__title">Интерливинг</h3> 
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
 
           <div class="cards__item">
             <img class="cards__image" src="images/cards-question.png" alt="Человек в комнате с множеством окон">
-            <h2 class="cards__title">Вопросы</h2> 
+            <h3 class="cards__title">Вопросы</h3> 
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
 
           <div class="cards__item">
             <img class="cards__image" src="images/cards-competence.png" alt="Стопка книг на руке">
-            <h2 class="cards__title">Иллюзия компетентности</h2> 
+            <h3 class="cards__title">Иллюзия компетентности</h3> 
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
         </div>
@@ -68,7 +68,7 @@
 
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
-        <p class="section-subtitle video_">Для тех, кто любит прокрастинировать</p>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -89,7 +89,7 @@
         <a href="#" class="feynman__link">Подробнее&#8594;</a>
       </section>
 
-      <section class="digits content_digits">
+      <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
         <div class="table">
@@ -100,7 +100,8 @@
 
           <div class="table__cell">
             <h3 class="table__heading">2.1 миллиарда</h3>
-            <p class="table__text">Число нуждающихся в повышении квалификации<br/><span class="table__quote">Всемирный Банк, 2017</span></p>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__quote">Всемирный Банк, 2017</p>
           </div>
 
           <div class="table__cell">
@@ -115,7 +116,8 @@
 
           <div class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства<br/><span class="table__quote">Всемирный Банк, 2017</span></p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__quote">Всемирный Банк, 2017</p>
           </div>
 
           <div class="table__cell">
@@ -139,7 +141,7 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <blockquote class="khan__quote"> Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -152,54 +154,54 @@
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <img class="kaufman__triangle rotation kaufman__triangle_rotation" alt="blue rectangle" src="images/kaufman-triangle.svg" width="877" height="877">
+        <img class="kaufman__triangle rotation" alt="blue rectangle" src="images/kaufman-triangle.svg">
         <div class="table table_theme_dark">
-          <div class="cell cell_theme_dark">
+          <div class="cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
 
-          <div class="cell cell_theme_dark">
+          <div class="table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
 
-          <div class="cell cell_theme_dark">
+          <div class="table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
 
-          <div class="cell cell_theme_dark">
+          <div class="table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
 
-          <div class="cell cell_theme_dark">
+          <div class="table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
 
-          <div class="cell cell_theme_dark">
+          <div class="table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
 
-          <div class="cell cell_theme_dark">
+          <div class="table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
 
-          <div class="cell cell_theme_dark">
+          <div class="table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
 
-          <div class="cell cell_theme_dark">
+          <div class="table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
 
-          <div class="cell cell_theme_dark">
+          <div class="table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
@@ -234,9 +236,9 @@
 
         <div class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
-          <a href="#" class="footer__social-links"><img class="footer__social-icon" alt="Значок Facevook" src="images/facebook_color_white.svg" width="16" height="16">Facebook</a>
-          <a href="#" class="footer__social-links"><img class="footer__social-icon" alt="Значок vk" src="images/vk_color_white.svg" width="16" height="16">ВКонтакте</a>
-          <a href="#" class="footer__social-links"><img class="footer__social-icon" alt="Значок Instagram" src="images/instagram_color_white.svg" width="16" height="16">Instagram</a>
+          <a href="#" class="footer__social-links"><img class="footer__social-icon" alt="Значок Facevook" src="images/facebook_color_white.svg">Facebook</a>
+          <a href="#" class="footer__social-links"><img class="footer__social-icon" alt="Значок vk" src="images/vk_color_white.svg">ВКонтакте</a>
+          <a href="#" class="footer__social-links"><img class="footer__social-icon" alt="Значок Instagram" src="images/instagram_color_white.svg">Instagram</a>
         </div>
       </div>
     </footer>
