--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="styles/normalize.css" rel="stylesheet" type="text/css">
   <link href="pages/index.css" rel="stylesheet" type="text/css">
   <title>Научиться учиться</title>
 </head>
@@ -33,52 +32,52 @@
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-        <div class="cards">
-          <div class="cards__item">
+        <ul class="cards">
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-attention.png" alt="Книга">
             <h3 class="cards__title">Два вида внимания</h3> 
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
-          </div>
+          </li>
 
-          <div class="cards__item">
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-recall.png" alt="Статуя">
             <h3 class="cards__title">Recall</h3> 
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
-          </div>
+          </li>
 
-          <div class="cards__item">
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-interliving.png" alt="Много людей в здании">
             <h3 class="cards__title">Интерливинг</h3> 
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-          </div>
+          </li>
 
-          <div class="cards__item">
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-question.png" alt="Человек в комнате с множеством окон">
             <h3 class="cards__title">Вопросы</h3> 
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-          </div>
+          </li>
 
-          <div class="cards__item">
+          <li class="cards__item">
             <img class="cards__image" src="images/cards-competence.png" alt="Стопка книг на руке">
             <h3 class="cards__title">Иллюзия компетентности</h3> 
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
 
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
+        <ul class="video__iframes">
+          <li><iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+          <li><iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+        </ul>
       </section>
       <section class="oakley">
         <div class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
         </div>
       </section>
@@ -156,52 +155,52 @@
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <img class="kaufman__triangle rotation" alt="blue rectangle" src="images/kaufman-triangle.svg">
         <div class="table table_theme_dark">
-          <div class="cell table__cell_theme_dark">
+          <div class="table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
 
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
 
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
 
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
 
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
 
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
 
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
 
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
 
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
 
-          <div class="table__cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
@@ -211,12 +210,12 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <div class="resources__logo-zone">
-          <img src="images/logo/resources-arzamas.svg" alt="Логотип Арзамас" class="resources__logo">
-          <img src="images/logo/resources-n1.svg" alt="Логотип N+1" class="resources__logo">
-          <img src="images/logo/resources-strelka.svg" alt="Логотип Стрелка" class="resources__logo">
-          <img src="images/logo/resources-polka.svg" alt="Логотип Полка" class="resources__logo">
-        </div>
+        <ul class="resources__logo-zone">
+          <li><img src="images/logo/resources-arzamas.svg" alt="Логотип Арзамас" class="resources__logo"></li>
+          <li><img src="images/logo/resources-n1.svg" alt="Логотип N+1" class="resources__logo"></li>
+          <li><img src="images/logo/resources-strelka.svg" alt="Логотип Стрелка" class="resources__logo"></li>
+          <li><img src="images/logo/resources-polka.svg" alt="Логотип Полка" class="resources__logo"></li>
+        </ul>
       </section>
     </main>
 
